openmediavault (5.0.5-1) unstable; urgency=low

  * Issue #380: Start rpc-statd service when NFS is enabled.
  * Issue #412: Fix bug in chrony.conf when there are multiple time servers.
  * Issue #413: Fix bug in Salt module omv_conf.get_sharedfolder_path.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 21 Jul 2019 21:23:30 +0200

openmediavault (5.0.4-1) unstable; urgency=low

  * Fix obsolete NFS config setting issue.
  * Issue #405: Fix file permissions for 5.0.3 migration script.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 05 Jul 2019 09:34:58 +0200

openmediavault (5.0.3-1) unstable; urgency=low

  * Code cleanup.
  * Set correct HTTP status codes.
  * Issue #322: Process Device Mapper devices correctly in method
    openmediavault.fs.Filesystem::get_parent_device_file().
  * Disable quota service if not used.
  * Update Material Design icons to version 3.7.95.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 19 May 2019 16:21:00 +0200

openmediavault (5.0.2-1) unstable; urgency=low

  * Fix rsyncd issue.
  * Enable TLS 1.3 in WebGUI.
  * Prefer X25519 over NIST P-384 and NIST P-256 in nginx's configuration
    for the WebGUI.
  * Fix proftpd error raised by erroneous PID file permissions.
  * Issue #371: Fix issues with PHP version.
  * Issue #374: Fix iptables issue. Use systemd service instead of ifupdown.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 10 May 2019 07:50:36 +0200

openmediavault (5.0.1-1) unstable; urgency=low

  * Display 'Updates available' status in dashboard widget.
  * Fix bug when writing file /etc/mdadm/mdadm.conf.
  * Issue #340: Fix bug in Avahi NFS SLS file.
  * Issue #347: Cannot create logical volume.
  * Issue #352: Fix bug in SSL certificate deployment.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 20 Apr 2019 10:34:15 +0200

openmediavault (5.0-1) unstable; urgency=low

  * Use Salt to deploy configuration settings. Using 'omv-salt stage run all'