@@ -3,6 +3,8 @@ openmediavault (5.0.5-1) unstable; urgency=low
   * Issue #380: Start rpc-statd service when NFS is enabled.
   * Issue #412: Fix bug in chrony.conf when there are multiple time servers.
   * Issue #413: Fix bug in Salt module omv_conf.get_sharedfolder_path.
+  * Issue #414: Fix bug in Filesystem::from_mount_point() method. The old
+    implementation was not able to handle Btrfs filesystems.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sun, 21 Jul 2019 21:23:30 +0200
 
